kubernetes/generated/manifests/prod/cilium/CiliumNetworkPolicy-allow-kube-dns-upstream-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-dns-upstream-egress
  namespace: kube-system
spec:
  description: Policy for egress to allow kube-dns to talk to upstream DNS.
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
